testdll is the DLL that contains the loadlibraryWrapper and committinng changes for passing DLL name for load as parameter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -219,3 +219,6 @@ endif()
 if(TARGET boost)
     add_dependencies(common boost)
 endif()
+
+message(STATUS "sdk version" ${CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION})
+message(STATUS ${PROJECT_SOURCE_DIR})
